# FlexEval

./: .env-example  .gitignore  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  CLAUDE.md  CONTEXT_ONLY_FEATURE.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  issues.txt  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  deploy-to-pypi.yml  github-pages.yml  validate.yaml
boneyard/: README.md  load_schema.py  test_validate.py  validate.py
configuration/: completion_functions.py  evals.yaml  function_metrics.py  rubric_metrics.yaml
data/test-cases/: example.jsonl
doc/: rubric_metric_guidelines.md
docs/: api.rst  conf.py  getting_started.rst  index.rst  rubric_guide.md  vignettes.py  vignettes.rst
docs/_templates/: footer.html
docs/sphinxext/: github.py
docs/user_guide/: abstractions.rst  cli.rst  index.rst  logging.rst  motivation.md  rubric_guide.md
example_project/: example_specific_rubrics.yaml
scripts/: smoke_test.py
src/flexeval/: __init__.py  __main__.py  cli.py  completions.py  compute_metrics.py  config-tests.yaml  config.yaml  data_loader.py  db_utils.py  default_config.yaml  dependency_graph.py  eval_schema.json  function_types.py  helpers.py  log_utils.py  main.py  rubric.py  run_utils.py  runner.py  validate.py
src/flexeval/classes/: Dataset.py  EvalRunner.py  EvalSetRun.py  Message.py  Metric.py  Thread.py  ToolCall.py  Turn.py  __init__.py  base.py  dataset.py  eval_runner.py  eval_set_run.py  jsonview.py  message.py  metric.py  metric_tmp.py  thread.py  tool_call.py  tool_call_tmp.py  turn.py
src/flexeval/cli/: primary.py
src/flexeval/configuration/: __init__.py  completion_functions.py  evals.yaml  function_metrics.py  rubric_metrics.yaml
src/flexeval/io/: __init__.py
src/flexeval/io/parsers/: yaml_parser.py
src/flexeval/metrics/: __init__.py  access.py  save.py
src/flexeval/schema/: __init__.py  config_schema.py  eval_schema.py  evalrun_schema.py  rubric_schema.py  schema_utils.py
src/flexeval/tests/: load_schema.py  verify_installation.py
src/llm-evals/: CustomChatCompletion.py  CustomEvals.py  Dockerfile  compute_metrics.py  config-dev.yaml  config-tests.yaml  config.yaml  data_loader.py  dev_setup.sh  eval_schema.json  helpers.py  main.py  requirements.txt  verify_installation.py
src/llm-evals/classes/: BaseModel.py  Conversation.py  Dataset.py  DatasetRow.py  EvalRunner.py  EvalSetRun.py  Message.py  Metric.py  Thread.py  ToolCall.py  Turn.py  TurnMetric.py  TurnProperty.py
src/llm-evals/evals_sync/registry/completion_fns/: levi_completion_functions.yaml
src/llm-evals/evals_sync/registry/eval_sets/: levi_evals.yaml
src/llm-evals/evals_sync/registry/evals/: levi_evals.yaml
src/llm-evals/queries/: one_metric_per_row.sql
src/llm-evals/templates/: completion_fn_template.yaml  function_metric_template.yaml  function_metric_template_run_details.yaml  rubric_metric_template.yaml
src/llm-evals/tests/: evals.yaml  functional_tests.py  generate_langgraph_data.py  load_schema.py  tests.py  verify_installation.py
src/llm-evals/tests/data/: langgraph-test-data.db  multiturn.jsonl  plot-convos.jsonl  simple.jsonl
src/metabase/: Dockerfile
tests/data/: simple_metadata.jsonl  simple_nosystem.jsonl
tests/integration/: config-tests.yaml  evals.yaml  functional_tests.py  langgraph_data.py  load_schema.py  tests.py  verify_installation.py
tests/integration/data/: plot-convos.jsonl
tests/resources/: function_metric.py  functional_config.yaml  functional_evals.yaml  test_config.yaml  test_evals.yaml  unittest.env
tests/unit/: mixins.py  old.py  test_EvalRunner.py  test_completions.py  test_compute_metrics.py  test_data_loader.py  test_db_utils.py  test_dependency_graph.py  test_eval_runner.py  test_function_metrics.py  test_function_types.py  test_functional.py  test_functions.py  test_rubric.py  test_schema.py  test_validate.py
tests/unit/io/: test_yaml_parser.py
vignettes/: .gitignore  basic.py  basic_cli.md  basic_rubric.py  conversations.jsonl  custom_functions.py  custom_rubric.md  custom_rubrics.yaml  eval_run.yaml  metric_analysis.ipynb  multiple_configs.py
