[project]
name = "FlexEval"
version = "0.1.0"
description = "FlexEval is a tool for designing custom metrics, completion functions, and LLM-graded rubrics for evaluating the behavior of LLM-powered systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flatten-json>=0.1.14",
    "jsonschema>=4.23.0",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.6",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "msgpack>=1.1.0",
    "networkx>=3.4.2",
    "openai>=1.66.0",
    "pandas>=2.2.3",
    "peewee>=3.17.9",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sympy>=1.13.3",
    "textstat>=0.7.5",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "ruff>=0.12.2",
]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flexeval"]
