[project]
name = "python-flexeval"
dynamic = ["version"]
description = "FlexEval is a tool for designing custom metrics, completion functions, and LLM-graded rubrics for evaluating the behavior of LLM-powered systems."
authors = [
  { name="S. Thomas Christie" },
  { name="Zachary Levonian" },
  { name="Baptiste Moreau-Pernet" },
  { name="Anna Rafferty" },
  { name="Terry Yu Tian" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
]
keywords = ["learning engineering", "education", "evaluation", "conversation", "large language models"]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flatten-json>=0.1.14",
    "jsonschema>=4.23.0",
    "msgpack>=1.1.0",
    "networkx>=3.4.2",
    "openai>=1.66.0",
    "pandas>=2.2.3",
    "peewee>=3.17.9",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "textstat>=0.7.5",
    "tiktoken>=0.7.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
# Optional, user-facing extras. Install with e.g. `pip install 'python-flexeval[litellm]'`.
# litellm enables `litellm_completion`, giving access to many non-OpenAI providers.
litellm = ["litellm>=1.74.3"]
# langgraph enables loading langgraph checkpoint SQLite databases (the `langgraph_sqlite` data source). 
# Users who don't load langgraph checkpoints do not need this.
langgraph = ["langgraph-checkpoint>=4.0.0"]
# viz enables the optional visualization helpers in flexeval.helpers.
viz = ["matplotlib>=3.10.3"]

[project.urls]
Homepage = "https://digitalharborfoundation.github.io/FlexEval/"
GitHub = "https://github.com/DigitalHarborFoundation/FlexEval"
Issues = "https://github.com/DigitalHarborFoundation/FlexEval/issues"

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "jupyter>=1.1.1",
    # langgraph packages are needed to build/read checkpoint DBs in the tests.
    # langgraph-checkpoint (the langgraph extra) comes in transitively via langgraph.
    # langchain-openai is used only to generate integration-test fixtures.
    "langchain-openai>=0.3.8",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    # litellm is needed for the litellm optional dependency.
    "litellm>=1.74.3",
    # matplotlib is needed for the viz optional dependency.
    "matplotlib>=3.10.3",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    # sympy is only used by the integration test fixtures (langgraph_data.py).
    "sympy>=1.13.3",
]
docs = [
    "autodoc-pydantic>=2.2.0",
    "linkify-it-py>=2.0.3",
    "myst-nb>=1.2.0",
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-programoutput>=0.18",
]

[project.scripts]
flexeval = "flexeval.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flexeval"]

[tool.hatch.version]
path = "src/flexeval/__about__.py"
